force-app/main/default/objects/Email_Addresses__mdt/Email_Addresses__mdt.object-meta.xml
<CustomObject>
    <description>To store TO,CC,BCC fields for Email Templates</description>
    <label>Email Address</label>
    <pluralLabel>Email Addresses</pluralLabel>
</CustomObject>