force-app/main/default/objects/Email_Addresses__mdt/fields/BCC__c.field-meta.xml
<CustomField>
    <fullName>BCC__c</fullName>
    <description>To store the Bcc addresses</description>
    <label>BCC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>