force-app/main/default/objects/Email_Addresses__mdt/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <description>To store the cc addresses</description>
    <label>CC Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>