force-app/main/default/objects/Email_Addresses__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SymphonyIPMExt__Dispute_Opposition__c</fullName>
                <label>Dispute/Opposition</label>
            </value>
            <value>
                <fullName>SymphonyIPM__Patent__c</fullName>
                <label>Patent</label>
            </value>
            <value>
                <fullName>SymphonyIPMExt__Trademark_Search__c</fullName>
                <label>Search Project</label>
            </value>
            <value>
                <fullName>SymphonyIPM__Trademark_New__c</fullName>
                <label>Trademark</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>