force-app/main/default/objects/Email_Addresses__mdt/fields/Parent_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Type__c</fullName>
    <description>To store the Email template Type sobject that will display the Email template Type</description>
    <label>Parent Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PATENT</fullName>
                <default>true</default>
                <label>PATENT</label>
            </value>
            <value>
                <fullName>PATENT OPPOSITION</fullName>
            </value>
            <value>
                <fullName>PATENT SEARCH</fullName>
            </value>
            <value>
                <fullName>TRADEMARK</fullName>
            </value>
            <value>
                <fullName>TRADEMARK OPPOSITION</fullName>
            </value>
            <value>
                <fullName>TRADEMARK PROJECT AND SEARCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>