force-app/main/default/objects/Email_Addresses__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>To store the query that needs to be done</description>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>