force-app/main/default/objects/Email_Addresses__mdt/fields/TemplateDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>TemplateDeveloperName__c</fullName>
    <description>To store the full developer name of the Email Template as 40 char is the limit</description>
    <label>TemplateDeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>