force-app/main/default/objects/Email_Addresses__mdt/fields/TO__c.field-meta.xml
<CustomField>
    <fullName>TO__c</fullName>
    <description>Store the TO address</description>
    <label>TO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>