force-app/main/default/objects/Email_Addresses__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Email Templates Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPLICATION AS FILED</fullName>
                <default>true</default>
                <label>APPLICATION AS FILED</label>
            </value>
            <value>
                <fullName>ABANDONMENT FORMALITIES</fullName>
            </value>
            <value>
                <fullName>AGREEMENTS / TM LICENSES</fullName>
            </value>
            <value>
                <fullName>AMENDED CLAIMS</fullName>
            </value>
            <value>
                <fullName>ANNUITY</fullName>
            </value>
            <value>
                <fullName>APPEAL</fullName>
            </value>
            <value>
                <fullName>APPLICATION</fullName>
            </value>
            <value>
                <fullName>ASSIGNMENT</fullName>
            </value>
            <value>
                <fullName>ABANDONMENT</fullName>
            </value>
            <value>
                <fullName>BIOLOGICAL DEPOSIT</fullName>
            </value>
            <value>
                <fullName>CORRESPONDENCE</fullName>
            </value>
            <value>
                <fullName>CUSTOM REGISTRATION</fullName>
            </value>
            <value>
                <fullName>EXAMINATION</fullName>
            </value>
            <value>
                <fullName>EXTENSION</fullName>
            </value>
            <value>
                <fullName>EXTENSION OF TIME</fullName>
            </value>
            <value>
                <fullName>FILE HISTORY</fullName>
            </value>
            <value>
                <fullName>FILING CORRESPONDENCE</fullName>
            </value>
            <value>
                <fullName>FILING FORMALITIES</fullName>
            </value>
            <value>
                <fullName>FILING RECEIPT</fullName>
            </value>
            <value>
                <fullName>FORMALITIES</fullName>
            </value>
            <value>
                <fullName>GRANT DETAILS</fullName>
            </value>
            <value>
                <fullName>HISTORY (SEARCH STRATEGY)</fullName>
            </value>
            <value>
                <fullName>INFORMATION DISCLOSURE</fullName>
            </value>
            <value>
                <fullName>INVOICE</fullName>
            </value>
            <value>
                <fullName>ISSUE-GRANT NOTICE</fullName>
            </value>
            <value>
                <fullName>LEGAL DOCUMENTS</fullName>
            </value>
            <value>
                <fullName>MAINTENANCE FORMALITIES (EG AFU DAU DIU E=TC)</fullName>
            </value>
            <value>
                <fullName>OFFICE ACTION</fullName>
            </value>
            <value>
                <fullName>OUTSOURCING</fullName>
            </value>
            <value>
                <fullName>POWER OF ATTORNEY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>